--- a/Practical_Lab_Exam.ipynb
+++ b/Practical_Lab_Exam.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Practical Lab Exam",
       "provenance": [],
-      "authorship_tag": "ABX9TyNPW7O6Rqlxw7VuXp+rM1nP",
+      "authorship_tag": "ABX9TyMPt+xotUxoTNFx+7SMd2AF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +49,7 @@
         "id": "ivKTt11uUNjo",
         "outputId": "1bc4f08f-6bb2-4294-ea92-a14611bd160b"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -62,6 +62,48 @@
             "Type the score: 62\n",
             "Type the score: 75\n",
             "The total score is:  397\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num=[]\n",
+        "sum=0\n",
+        "number=int(input(\"Enter the total number you want to input\"))\n",
+        "for d in range(1,number+1):\n",
+        "  value=int(input(\"Input the Value of %d element: \"))\n",
+        "  num.append(value)\n",
+        "\n",
+        "for i in range(number):\n",
+        "  if(num[i]%2==1):\n",
+        "    sum=sum+num[i]\n",
+        "\n",
+        "print(\"The sum of all odd numbers in the list is\", sum)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iWbDOUBBlLTX",
+        "outputId": "3231e197-36fe-4b15-f880-da30e79cbbce"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the total number you want to input6\n",
+            "Input the Value of %d element: 26\n",
+            "Input the Value of %d element: 49\n",
+            "Input the Value of %d element: 98\n",
+            "Input the Value of %d element: 87\n",
+            "Input the Value of %d element: 62\n",
+            "Input the Value of %d element: 75\n",
+            "The sum of all odd numbers in the list is 211\n"
           ]
         }
       ]
